# esp-can-link

./: .gitignore  CLAUDE.md  LICENSE  README.md
docs/: firmware.md  getting_started.md  protocol.md
software/ch32/can_bridge/: .template
software/ch32/can_bridge/.mrs/: can_bridge.mrs-workspace
software/ch32/can_bridge/User/: Main.c  can_driver.c  debug.h
software/ch32/ref/APPLICATION/WS2812_LED/.mrs/: WS2812_LED.mrs-workspace
software/ch32/ref/CAN/TestMode/.mrs/: TestMode.mrs-workspace
software/esp32/: README.md
software/esp32/can_bridge/: sdkconfig.defaults
software/esp32/can_bridge/main/: CMakeLists.txt  app_main.c  command_handler.c  command_handler.h
software/esp32/components/can_driver/: CMakeLists.txt  can_driver.c
software/esp32/components/can_driver/include/: can_driver.h
software/esp32/components/led_indicator/: CMakeLists.txt  led_indicator.c
software/esp32/components/led_indicator/include/: led_indicator.h
software/esp32/components/protocol/: CMakeLists.txt  protocol.c
software/esp32/components/protocol/include/: protocol.h
software/esp32/components/usb_cdc/: CMakeLists.txt
software/esp32/components/usb_cdc/include/: usb_cdc.h
software/pc/: .gitignore  CLAUDE.md  README.md  main.py  main.spec  pyproject.toml
software/pc/core/: log_manager.py  serial_manager.py
software/pc/ui/: log_panel.py  main_window.py  serial_panel.py  tab_widget.py
software/pc/ui/tabs/: can_monitor_tab.py  can_send_tab.py  data_exchange_tab.py  filter_tab.py  placeholder_tab.py  quick_cmd_tab.py
software/pc/utils/: helpers.py
